# fix_protobuf_imports

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fix_protobuf_imports/: fix_protobuf_imports.py
